[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/test/host/battle.gd" type="Script" id=1]
[ext_resource path="res://entity/unit/vtol-unit/training_helicopter/training_helicopter.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/unit/ground-unit/training_tank/training_tank.tscn" type="PackedScene" id=4]
[ext_resource path="res://entity/unit/fixed-wing-unit/training_aircraft/training_aircraft.tscn" type="PackedScene" id=7]
[ext_resource path="res://entity/unit/ground-unit/fox/fox.tscn" type="PackedScene" id=9]

[node name="battle" type="Node"]
script = ExtResource( 1 )

[node name="training_aircraft" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.685, 5, 0 )
visible = false

[node name="training_helicopter" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
visible = false

[node name="training_tank" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.56059, 5, 1.08055 )
visible = false

[node name="fox" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.88077, 5.28563, 1.09135 )
